--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -32,5 +32,7 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>NSFileAccessUsageDescription</key>
+    <string>앱이 파일을 읽거나 생성하기 위해 권한이 필요합니다.</string>
 </dict>
 </plist>
