--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,7 +90,7 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "Amphi" "\0"
-            VALUE "FileDescription", "Amphi Notes" "\0"
+            VALUE "FileDescription", "Notes" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "notes" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024-2025 Amphi. All rights reserved." "\0"
