--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  FLUTTER_VERSION: "3.24.5"
+
 jobs:
   build_deb:
     runs-on: ubuntu-latest
@@ -17,8 +20,8 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
-          channel: 'stable'
+          flutter-version:  ${{ env.FLUTTER_VERSION }}
+          channel:  ${{ env.FLUTTER_VERSION }}
 
       - name: Enable Linux Desktop
         run: flutter config --enable-linux-desktop
