--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
             sudo apt-get update
-            sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2
+            sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
