--- a/.github/workflows/build_app_image.yml
+++ b/.github/workflows/build_app_image.yml
@@ -54,12 +54,18 @@ jobs:
 
           cp assets/logo/icon_128x128.png AppDir/usr/share/icons/hicolor/128x128/apps/amphi/notes.png
           cp assets/logo/icon_256x256.png AppDir/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
+          
+          ls -l AppDir/usr/share/icons/hicolor/128x128/apps/amphi/notes.png
+
+          ls -l AppDir/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
+
+          ls -R AppDir/usr/share/icons/hicolor/
 
           cat <<EOL > AppDir/amphi-notes.desktop
           [Desktop Entry]
           Name=Notes
           Exec=/usr/share/amphi/notes/notes
-          Icon=notes.png
+          Icon=/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
           Type=Application
           Categories=Utility;TextEditor;
           EOL
