--- a/.github/workflows/build_app_image.yml
+++ b/.github/workflows/build_app_image.yml
@@ -65,7 +65,7 @@ jobs:
           [Desktop Entry]
           Name=Notes
           Exec=/usr/share/amphi/notes/notes
-          Icon=/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
+          Icon=/usr/share/icons/hicolor/256x256/apps/amphi/notes
           Type=Application
           Categories=Utility;TextEditor;
           EOL
