--- a/scripts/PKGBUILD
+++ b/scripts/PKGBUILD
@@ -10,7 +10,7 @@ conflicts=('amphi-notes')
 provides=('amphi-notes')
 options=(!debug)
 source_x86_64=("${url}/releases/download/v${pkgver}/LocalSend-${pkgver}-linux-x86-64.deb")
-source_aarch64=("${url}/releases/download/v${pkgver}/LocalSend-${pkgver}-linux-arm-64.deb")
+source_aarch64=("${url}/releases")
 sha256sums_x86_64=('')
 sha256sums_aarch64=('')
 _pkgdesktop="amphi-notes.desktop"
