--- a/scripts/PKGBUILD
+++ b/scripts/PKGBUILD
@@ -9,7 +9,7 @@ depends=(fuse2 )
 conflicts=('amphi-notes')
 provides=('amphi-notes')
 options=(!debug)
-source_x86_64=("${url}/releases/download/v${pkgver}/LocalSend-${pkgver}-linux-x86-64.deb")
+source_x86_64=("${url}/releases")
 source_aarch64=("${url}/releases")
 sha256sums_x86_64=('')
 sha256sums_aarch64=('')
