--- a/.github/workflows/aur_release.yml
+++ b/.github/workflows/aur_release.yml
@@ -35,30 +35,31 @@ jobs:
           arch=('x86_64' 'aarch64')
           license=(APACHE)
           depends=(fuse2 mpv mimalloc)
-          conflicts=('amphi-notes')
-          provides=('amphi-notes')
           options=(!debug)
           source_x86_64=("${url}/releases/notes/linux/x86/deb/notes-linux-x86-1.0.0.deb")
           source_aarch64=("${url}/releases/notes/linux/arm/deb/notes-linux-arm-1.0.0.deb")
-          sha256sums_x86_64=("")
-          sha256sums_aarch64=("")
+          sha256sums_x86_64=("f3b22a7e785d706e041118e4029d0ba43cf143e39a773b97bf41c0ef2a40a601")
+          sha256sums_aarch64=("f3b22a7e785d706e041118e4029d0ba43cf143e39a773b97bf41c0ef2a40a601")
           _pkgdesktop="amphi-notes.desktop"
           
           
           prepare() {
-          tar -xf data.tar.xz
+            if [[ -f data.tar.xz ]]; then
+            tar -xf data.tar.xz
+            elif [[ -f data.tar.zst ]]; then
+            tar --zstd -xf data.tar.zst
+            else
+            echo "Error: data.tar.xz or data.tar.zst not found!"
+            exit 1
+            fi
           }
           
           build() {
-            sed -i -E \
-            "s|Exec=notes|Exec=notes|" \
-            "${srcdir}/usr/share/applications/${_pkgdesktop}"
-            
-            sed -i -E 's/^Icon=.+/Icon=notes/' "${srcdir}/usr/share/applications/${_pkgdesktop}"
+
           }
             
           package() {
-            install -Dm644 "${srcdir}/usr/share/applications/${_pkgdesktop}" "${pkgdir}/usr/share/applications/${pkgname%-*}.desktop"
+            install -Dm644 "${srcdir}/usr/share/applications/amphi-notes.desktop" "${pkgdir}/usr/share/applications/amphi-notes.desktop"
             
             
             install -dm644 "${pkgdir}/usr/share/icons/"
