--- a/.github/workflows/aur_release.yml
+++ b/.github/workflows/aur_release.yml
@@ -53,19 +53,15 @@ jobs:
             exit 1
             fi
           }
-          
-          build() {
-
-          }
             
           package() {
-            install -Dm644 "${srcdir}/usr/share/applications/amphi-notes.desktop" "${pkgdir}/usr/share/applications/amphi-notes.desktop"
+            install -Dm644 "${srcdir}/usr/share/applications/${_pkgdesktop}" "${pkgdir}/usr/share/applications/${_pkgdesktop}"
             
             
             install -dm644 "${pkgdir}/usr/share/icons/"
             cp -a "${srcdir}/usr/share/icons" "${pkgdir}/usr/share"
             for res in "128x128" "256x256"; do
-            mv "${pkgdir}/usr/share/icons/hicolor/${res}/apps/notes.png" "${pkgdir}/usr/share/icons/hicolor/${res}/apps/notes.png"
+            mv "${pkgdir}/usr/share/icons/hicolor/${res}/apps/amphi/notes.png" "${pkgdir}/usr/share/icons/hicolor/${res}/apps/amphi/notes.png"
             done
             
 
