--- a/.github/workflows/build_tar_arm.yml
+++ b/.github/workflows/build_tar_arm.yml
@@ -1,4 +1,4 @@
-name: Build TAR on arm
+name: Build TAR on ARM
 
 on:
   push:
@@ -8,10 +8,14 @@ on:
 
 env:
   FLUTTER_VERSION: "3.27.1"
+  TARGET_ARCH: "arm64"
 
 jobs:
-  build_deb:
+  build_tar_arm:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [arm64]
 
     steps:
       - name: Checkout repository
@@ -34,6 +38,12 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Linux App
-        run: flutter build linux
+      - name: Build ARM Linux App
+        run: |
+          flutter build linux --target-platform=linux-${{ matrix.arch }}
 
+      - name: Upload TAR as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: notes-arm-linux-tar
+          path: build/linux/${{ matrix.arch }}/release/bundle/*
