--- a/.github/workflows/arm_test.yml
+++ b/.github/workflows/arm_test.yml
@@ -1,4 +1,4 @@
-name: Build TAR on ARM
+name: test
 
 on:
   push:
@@ -10,8 +10,11 @@ env:
   FLUTTER_VERSION: "3.27.1"
 
 jobs:
-  build_tar_arm:
-    runs-on: [self-hosted, linux, arm64]
+  build_tar:
+    runs-on: windows-2022
+    strategy:
+      matrix:
+        architecture: [ arm64 ]
 
     steps:
       - name: Checkout repository
@@ -27,19 +30,3 @@ jobs:
         with:
           flutter-version:  ${{ env.FLUTTER_VERSION }}
           channel: "stable"
-
-      - name: Enable Linux Desktop
-        run: flutter config --enable-linux-desktop
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build ARM Linux App
-        run: |
-          flutter build linux --target-platform=linux-arm64
-
-      - name: Upload TAR as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: notes-arm-linux-tar
-          path: build/linux/arm64/release/bundle/*
