--- a/.github/workflows/arm_test.yml
+++ b/.github/workflows/arm_test.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: sex
+        run: |
+          echo %PROCESSOR_ARCHITECTURE%
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
