--- a/.github/workflows/snap_release.yml
+++ b/.github/workflows/snap_release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0 snapcraft
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
+          sudo snap install snapcraft --classic
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
