--- a/.github/workflows/snap_release.yml
+++ b/.github/workflows/snap_release.yml
@@ -66,6 +66,10 @@ jobs:
           cd snap
           snapcraft
 
+      - name: View Logs
+        run: |
+          cat /home/runner/.local/state/snapcraft/log/*
+
       - name: Upload Snap as Artifact
         uses: actions/upload-artifact@v4
         with:
