--- a/.github/workflows/snap_release.yml
+++ b/.github/workflows/snap_release.yml
@@ -1,9 +1,6 @@
 name: Snap Release
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
   workflow_dispatch:
 
 env:
@@ -11,7 +8,7 @@ env:
 
 jobs:
   build_snap:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd]
 
     steps:
       - name: Checkout repository
@@ -22,6 +19,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
           sudo snap install snapcraft --classic
+          sudo snap install lxd
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
