--- a/.github/workflows/snap_release.yml
+++ b/.github/workflows/snap_release.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build_snap:
-    runs-on: [self-hosted, linux, amd]
+    runs-on: [self-hosted, linux, x64]
 
     steps:
       - name: Checkout repository
