--- a/.github/workflows/snap_release.yml
+++ b/.github/workflows/snap_release.yml
@@ -20,8 +20,8 @@ jobs:
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
           sudo snap install snapcraft --classic
           sudo snap install lxd
-          sudo usermod -aG lxd $USER
-          newgrp lxd
+#          sudo usermod -aG lxd $USER
+#          newgrp lxd
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
