--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -1,4 +1,4 @@
-name: Snap Release
+name: Build Snap
 
 on:
   workflow_dispatch:
@@ -20,8 +20,6 @@ jobs:
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
           sudo snap install snapcraft --classic
           sudo snap install lxd
-#          sudo usermod -aG lxd $USER
-#          newgrp lxd
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
