--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -14,14 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
-          sudo snap install snapcraft --classic
-          sudo snap install lxd
-          sudo usermod -aG lxd $USER
-          sudo lxd init
+          sudo apt-get install -y docker.io
+          sudo systemctl enable --now docker
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
@@ -38,13 +35,15 @@ jobs:
       - name: Build Linux App
         run: flutter build linux
 
-      - name: Build Snap Package
+      - name: Build Snap Package Using Docker
         run: |
-          cd snap
-          snapcraft
+          docker run --rm \
+            -v $PWD:/workspace \
+            -w /workspace \
+            snapcore/snapcraft:stable snapcraft
 
       - name: Upload Snap as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: flutter-snap-package
-          path: amphi-notes_1.0.0_amd64.snap
+          path: notes.snap
