--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -14,11 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Docker
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker.io
-          sudo systemctl enable --now docker
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
+          sudo snap install snapcraft --classic
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
@@ -35,15 +35,12 @@ jobs:
       - name: Build Linux App
         run: flutter build linux
 
-      - name: Build Snap Package Using Docker
+      - name: Build Snap Package
         run: |
-          docker run --rm \
-            -v $PWD:/workspace \
-            -w /workspace \
-            snapcore/snapcraft:stable snapcraft
+          snapcraft
 
       - name: Upload Snap as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: flutter-snap-package
-          path: notes.snap
+          path: amphi-notes_1.0.0_amd64.snap
