--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
+
       - uses: snapcore/action-build@v1
         id: build
 
@@ -28,7 +33,7 @@ jobs:
 #          sudo apt-get update
 #          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
 #          sudo snap install snapcraft --classic
-##          sudo snap install lxd --classic
+#          sudo snap install lxd --classic
 #
 #      - name: Install Flutter
 #        uses: subosito/flutter-action@v2
