--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -18,6 +18,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
 
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version:  ${{ env.FLUTTER_VERSION }}
+          channel: "stable"
+
+      - name: Enable Linux Desktop
+        run: flutter config --enable-linux-desktop
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Linux App
+        run: flutter build linux
+
       - uses: snapcore/action-build@v1
         id: build
 
