--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
 
       - name: Install dependencies
         run: |
@@ -33,10 +35,10 @@ jobs:
       - name: Build Linux App
         run: flutter build linux
 
-      - uses: snapcore/action-build@v1
+      - uses: snapcore/action-build@v4
         id: build
 
-      - uses: diddlesnaps/snapcraft-review-action@v1
+      - uses: diddlesnaps/snapcraft-review-action@v4
         with:
           snap: ${{ steps.build.outputs.snap }}
           isClassic: 'true'
