--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,9 +22,19 @@ parts:
     source: .
     plugin: flutter
     flutter-target: lib/main.dart
-
     build-packages:
       - curl
+      - clang
+      - cmake
+      - libgtk-3-dev
+      - ninja-build
+      - libayatana-appindicator3-dev
+    stage-packages:
+      - libfuse2
+      - libmpv-dev
+      - mpv
+      - libmimalloc-dev
+      - libmimalloc2.0
 
 architectures:
   - build-on: [ amd64 ]
