--- a/.github/workflows/build_snap.yml
+++ b/.github/workflows/build_snap.yml
@@ -1,4 +1,4 @@
-name: Build Snap
+name: Build SNAP
 
 on:
   workflow_dispatch:
@@ -11,14 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v4
-
 
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
+          sudo snap install snapcraft --classic
+          sudo snap install lxd --classic
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
@@ -35,45 +37,12 @@ jobs:
       - name: Build Linux App
         run: flutter build linux
 
-      - uses: snapcore/action-build@v1
-        id: build
+      - name: Build Snap Package
+        run: |
+          snapcraft
 
-      - uses: diddlesnaps/snapcraft-review-action@v1
+      - name: Upload Snap as Artifact
+        uses: actions/upload-artifact@v4
         with:
-          snap: ${{ steps.build.outputs.snap }}
-          isClassic: 'true'
-#      - name: Checkout repository
-#        uses: actions/checkout@v4
-#
-#      - name: Install dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
-#          sudo snap install snapcraft --classic
-#          sudo snap install lxd --classic
-#
-#      - name: Install Flutter
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version:  ${{ env.FLUTTER_VERSION }}
-#          channel: "stable"
-#
-#      - name: Enable Linux Desktop
-#        run: flutter config --enable-linux-desktop
-#
-#      - name: Install dependencies
-#        run: flutter pub get
-#
-#      - name: Build Linux App
-#        run: flutter build linux
-#
-#      - name: Build Snap Package
-#        run: |
-#          snapcraft --use-lxd=false
-#          snapcraft
-#
-#      - name: Upload Snap as Artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: flutter-snap-package
-#          path: amphi-notes_1.0.0_amd64.snap
+          name: flutter-snap-package
+          path: amphi-notes_1.0.0_amd64.snap
