--- a/snap/gui/amphi-notes.desktop
+++ b/snap/gui/amphi-notes.desktop
@@ -2,7 +2,7 @@
 Name=Notes
 Comment=A note-taking app created by Amphi
 Icon=${SNAP}/meta/gui/icon.png
-Exec=amphi-notes %U
+Exec=notes %U
 Terminal=false
 Type=Application
 Categories=Utility;
