--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,34 +8,27 @@ confinement: strict
 grade: stable
 
 apps:
-  amphi-notes:
-    command: amphi-notes
+  notes:
+    command: notes
     extensions: [ gnome ]
     plugs:
       - network
       - x11
       - desktop
       - desktop-legacy
-
 parts:
   notes:
-    source: .
-    plugin: flutter
-    flutter-target: lib/main.dart
-    build-packages:
-      - curl
-      - clang
-      - cmake
-      - libgtk-3-dev
-      - ninja-build
-      - libayatana-appindicator3-dev
+    plugin: dump
+    source: ./build/linux/x64/release/bundle
     stage-packages:
-      - libfuse2
       - libmpv-dev
       - mpv
       - libmimalloc-dev
       - libmimalloc2.0
 
+    stage:
+      - data/*
+      - lib/*
+      - notes
 architectures:
   - build-on: [ amd64 ]
-  - build-on: [ arm64 ]
