--- a/snap/gui/amphi-notes.desktop
+++ b/snap/gui/amphi-notes.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=Notes
 Comment=A note-taking app created by Amphi
+Exec=amphi-notes.notes
 Icon=${SNAP}/meta/gui/icon.png
-Exec=/snap/amphi-notes/current/notes
 Terminal=false
 Type=Application
 Categories=Utility;
