--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -34,44 +34,15 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Linux App
-        run: flutter build linux
+      - name: Enable flutter_distributor
+        run: dart pub global activate flutter_distributor
 
-      - name: Install Packaging Tools
-        run: sudo apt-get update && sudo apt-get install -y dpkg fakeroot
+      - name: Build DEB
+        working-directory: app
+        run: PATH="$PATH:$HOME/.pub-cache/bin" flutter_distributor package --platform linux --targets deb
 
-      - name: Create DEB Package
-        run: |
-          mkdir -p deb_package/DEBIAN
-          mkdir -p deb_package/usr/share/icons/hicolor/128x128/apps/amphi/
-          mkdir -p deb_package/usr/share/icons/hicolor/256x256/apps/amphi/
-          mkdir -p deb_package/usr/share/amphi/notes/
-          mkdir -p deb_package/usr/share/applications/
-          cp -r build/linux/x64/release/bundle/* deb_package/usr/share/amphi/notes/
-          cp assets/logo/icon_128x128.png deb_package/usr/share/icons/hicolor/128x128/apps/amphi/notes.png
-          cp assets/logo/icon_256x256.png deb_package/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
-          
-          cat <<EOL > deb_package/usr/share/applications/amphi-notes.desktop
-          [Desktop Entry]
-          Name=Notes
-          Exec=/usr/share/amphi/notes/notes
-          Icon=/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
-          Type=Application
-          Categories=Utility;TextEditor;
-          EOL
-          
-          cat <<EOL > deb_package/DEBIAN/control
-          Package: Notes
-          Version: 1.0.0
-          Architecture: amd64
-          Maintainer: Amphi
-          Description: Amphi Notes
-          EOL
-          
-          dpkg-deb --build deb_package notes.deb
-
-      - name: Upload DEB as Artifact
+      - name: Upload deb file
         uses: actions/upload-artifact@v4
         with:
-          name: flutter-deb-package
-          path: notes.deb
+          name: result
+          path: dist/*
