--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -61,11 +61,6 @@ dependencies:
       url: https://github.com/amphi2024/flutter-shared
       ref: main
   pdf:
-
-#  editable_table:
-#    path: ../editable_table
-#  selectable_draggable_listview:
-#    path: ../selectable_draggable_listview
 
 dev_dependencies:
   flutter_test:
