--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Upload DEB
         uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: result-deb
           path: dist/*
