--- a/.github/workflows/build_tar.yml
+++ b/.github/workflows/build_tar.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: result-tar
-          path: notes-linux.tar.zst
+          path: ./notes-linux.tar.zst
