--- a/.github/workflows/build_tar.yml
+++ b/.github/workflows/build_tar.yml
@@ -38,9 +38,10 @@ jobs:
         run: |
           cd build/linux/x64/release/bundle
           tar --use-compress-program=zstd -cvf ../../../../notes-linux.tar.zst *
+          cd ../../../..
 
       - name: Upload TAR as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: result-tar
-          path: ./notes-linux.tar.zst
+          path: notes-linux.tar.zst
