--- a/.github/workflows/build_appimage.yml
+++ b/.github/workflows/build_appimage.yml
@@ -1,16 +1,13 @@
-name: Build RPM
+name: Build AppImage
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
   workflow_dispatch:
 
 env:
   FLUTTER_VERSION: "3.27.1"
 
 jobs:
-  build_rpm:
+  build_appimage:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,12 +17,12 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0 rpm
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version:  ${{ env.FLUTTER_VERSION }}
           channel: "stable"
 
       - name: Enable Linux Desktop
@@ -37,11 +34,11 @@ jobs:
       - name: Enable flutter_distributor
         run: dart pub global activate flutter_distributor
 
-      - name: Build RPM
-        run: PATH="$PATH:$HOME/.pub-cache/bin" flutter_distributor package --platform linux --targets rpm
+      - name: Build AppImage
+        run: PATH="$PATH:$HOME/.pub-cache/bin" flutter_distributor package --platform linux --targets appimage
 
-      - name: Upload RPM
+      - name: Upload AppImage
         uses: actions/upload-artifact@v4
         with:
-         name: result-rpm
-         path: dist/*
+          name: result-appimage
+          path: dist/*
