--- a/linux/packaging/appimage/make_config.yaml
+++ b/linux/packaging/appimage/make_config.yaml
@@ -1,37 +1,37 @@
-display_name: Hello World
+display_name: Notes
 
-icon: assets/logo.png
+icon: assets/logo/icon_512x512.png
 
 keywords:
-  - Hello
-  - World
-  - Test
+  - Notes
   - Application
 
-generic_name: Cool Application
+generic_name: Note Taking Application
 
 # supported mime types that can be opened using this application
 # supported_mime_type:
 #   - audio/mpeg
 
-metainfo: linux/packaging/helloworld.appdata.xml
+metainfo: linux/packaging/notes.appdata.xml
 
-actions:
-  - name: Say Hi
-    label: say-hi
-    arguments:
-      - --say
-      - hi
-  - name: Say Bye
-    label: say-bye
-    arguments:
-      - --say
-      - bye
+#actions:
+#  - name: Say Hi
+#    label: say-hi
+#    arguments:
+#      - --say
+#      - hi
+#  - name: Say Bye
+#    label: say-bye
+#    arguments:
+#      - --say
+#      - bye
 
 categories:
-  - Music
+  - Notes
+  - Utility
+  - Productivity
 
-startup_notify: true
+startup_notify: false
 
 # You can specify the shared libraries that you want to bundle with your app
 #
@@ -42,4 +42,5 @@ startup_notify: true
 #
 # include:
 #   - libcurl.so.4
-include: []
+include:
+  - libmpv.so.2
