--- a/.github/workflows/build_tar_arm.yml
+++ b/.github/workflows/build_tar_arm.yml
@@ -1,9 +1,6 @@
 name: Build TAR on ARM
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
   workflow_dispatch:
 
 env:
@@ -28,12 +25,19 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build ARM Linux App
+      - name: Build App
         run: |
           flutter build linux
+          
+
+      - name: Create TAR
+        run: |
+          cd build/linux/arm64/release/bundle
+          tar --use-compress-program=zstd -cvf ../../../../../notes-linux.tar.zst *
+          cd ../../../../..
 
       - name: Upload TAR as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: notes-arm-linux-tar
+          name: result
           path: build/linux/arm64/release/bundle/*
