--- a/.github/workflows/build_deb_arm.yml
+++ b/.github/workflows/build_deb_arm.yml
@@ -1,9 +1,6 @@
-name: Build DEB
+name: Build DEB on ARM
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
   workflow_dispatch:
 
 env:
@@ -22,64 +19,20 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version:  ${{ env.FLUTTER_VERSION }}
-          channel: "stable"
-
       - name: Enable Linux Desktop
         run: flutter config --enable-linux-desktop
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Linux App
-        run: flutter build linux
+      - name: Enable flutter_distributor
+        run: dart pub global activate flutter_distributor
 
-      - name: Install Packaging Tools
-        run: sudo apt-get update && sudo apt-get install -y dpkg fakeroot
+      - name: Build DEB
+        run: PATH="$PATH:$HOME/.pub-cache/bin" flutter_distributor package --platform linux --targets deb
 
-      - name: Create DEB Package
-        run: |
-          mkdir -p deb_package/DEBIAN
-          mkdir -p deb_package/usr/share/icons/hicolor/128x128/apps/amphi/
-          mkdir -p deb_package/usr/share/icons/hicolor/256x256/apps/amphi/
-          mkdir -p deb_package/usr/share/amphi/notes/
-          mkdir -p deb_package/usr/share/applications/
-          cp -r build/linux/x64/release/bundle/* deb_package/usr/share/amphi/notes/
-          cp assets/logo/icon_128x128.png deb_package/usr/share/icons/hicolor/128x128/apps/amphi/notes.png
-          cp assets/logo/icon_256x256.png deb_package/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
-          
-          cat <<EOL > deb_package/usr/share/applications/amphi-notes.desktop
-          [Desktop Entry]
-          Name=Notes
-          Exec=/usr/share/amphi/notes/notes
-          Icon=/usr/share/icons/hicolor/256x256/apps/amphi/notes.png
-          Type=Application
-          Categories=Utility;TextEditor;
-          EOL
-          
-          cat <<EOL > deb_package/DEBIAN/control
-          Package: Notes
-          Version: 1.0.0
-          Architecture: amd64
-          Maintainer: Amphi
-          Description: Amphi Notes
-          EOL
-          
-          dpkg-deb --build deb_package notes.deb
-
-      - name: Upload DEB as Artifact
+      - name: Upload DEB
         uses: actions/upload-artifact@v4
         with:
-          name: flutter-deb-package
-          path: notes.deb
-
-      - name: Release DEB on GitHub
-        #        if: github.ref == 'refs/heads/main'
-        uses: softprops/action-gh-release@v2
-        with:
-          files: notes.deb
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: result-deb-arm
+          path: dist/*
