--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -2,6 +2,7 @@ display_name: Notes
 packager: Amphi
 packagerEmail: amphiprioninae2024@gmail.com
 url: https://amphi.site
+buildArch: arm64
 license: APACHE
 
 icon: assets/logo/icon_512x512.png
