--- a/scripts/PKGBUILD
+++ b/scripts/PKGBUILD
@@ -1,7 +1,7 @@
 pkgname=amphi-notes
-pkgver=1.0.0
+pkgver=1.1.0
 pkgrel=1
-pkgdesc='A note-taking app created by Amphi'
+pkgdesc='Cross-platform note-taking app that enables users to sync their data with a self-hosted server'
 url=https://amphi.site
 arch=('x86_64' 'aarch64')
 license=(APACHE)
