--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -32,7 +32,10 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
-	<key>NSFileAccessUsageDescription</key>
-    <string>앱이 파일을 읽거나 생성하기 위해 권한이 필요합니다.</string>
+<key>NSFileSystemUsageDescription</key>
+<string>We need access to your files to allow you to select images from your file system.</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to allow you to select images.</string>
+
 </dict>
 </plist>
