--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,29 +36,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:
-  flex_color_picker:
-  http:
-  web_socket_channel:
-  flutter_staggered_grid_view:
+  cupertino_icons: ^1.0.8
+  http: ^1.3.0
+  web_socket_channel: ^3.0.2
+  flutter_staggered_grid_view: ^0.7.0
   flutter_quill: ^10.0.0
-  flutter_colorpicker:
-  device_info_plus:
-  macos_ui:
-  percent_indicator:
-  media_kit:
-  file_picker:
-  desktop_drop:
-  image_picker_ios:
-  image_picker_macos:
-  fl_chart:
-  smooth_page_indicator:
-  bitsdojo_window:
+  flutter_colorpicker: ^1.1.0
+  device_info_plus: ^11.3.3
+  percent_indicator: ^4.2.4
+  media_kit: ^1.1.11
+  file_picker: ^9.2.3
+  image_picker_ios: ^0.8.12+2
+  image_picker_macos: ^0.2.1+2
+  fl_chart: ^0.70.2
+  smooth_page_indicator: ^1.2.1
+  bitsdojo_window: ^0.1.6
 
   amphi:
     git:
       url: https://github.com/amphi2024/flutter-shared
       ref: main
+#      ref: v1.1.0
+
   pdf:
 
 dev_dependencies:
