--- a/.github/workflows/build_tar_arm.yml
+++ b/.github/workflows/build_tar_arm.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Upload TAR as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: result
-          path: build/linux/arm64/release/bundle/*
+          name: result-tar
+          path: notes-linux.tar.zst
