--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,23 +40,25 @@ dependencies:
   http: ^1.3.0
   web_socket_channel: ^3.0.2
   flutter_staggered_grid_view: ^0.7.0
-  flutter_quill: ^10.0.0
+  flutter_quill: ^11.4.2
   flutter_colorpicker: ^1.1.0
   device_info_plus: ^11.3.3
   percent_indicator: ^4.2.4
-  media_kit: ^1.1.11
   file_picker: ^9.2.3
   image_picker_ios: ^0.8.12+2
   image_picker_macos: ^0.2.1+2
   fl_chart: ^0.70.2
   smooth_page_indicator: ^1.2.1
   bitsdojo_window: ^0.1.6
+  video_player: ^2.10.0
+  flutter_riverpod: ^3.0.0
+  video_thumbnail: ^0.5.6
+  sqflite: ^2.4.2
 
   amphi:
     git:
       url: https://github.com/amphi2024/flutter-shared
-      ref: main
-#      ref: v1.1.0
+      ref: v1.3.0
 
   pdf:
 
