--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_riverpod: ^3.0.0
   video_thumbnail: ^0.5.6
   sqflite: ^2.4.2
+  share_plus: ^11.0.0
 
   amphi:
     git:
