--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,14 @@ dependencies:
   fl_chart: ^0.70.2
   smooth_page_indicator: ^1.2.1
   bitsdojo_window: ^0.1.6
-  video_player: ^2.10.0
   riverpod: ^3.0.0
   flutter_riverpod: ^3.0.0
   video_thumbnail: ^0.5.6
   sqflite: ^2.4.2
   share_plus: ^11.0.0
+  media_kit: ^1.2.1
+  media_kit_video: ^1.3.1
+  media_kit_libs_video: ^1.0.7
 
   amphi:
     git:
