--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,13 +58,12 @@ dependencies:
   media_kit: ^1.2.1
   media_kit_video: ^1.3.1
   media_kit_libs_video: ^1.0.7
+  pdf: ^3.11.3
 
   amphi:
     git:
       url: https://github.com/amphi2024/flutter-shared
-      ref: v1.3.0
-
-  pdf:
+      ref: v1.4.0
 
 dev_dependencies:
   flutter_test:
