--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_riverpod: ^3.0.0
   video_thumbnail: ^0.5.6
   sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.6
   share_plus: ^11.0.0
   media_kit: ^1.2.1
   media_kit_video: ^1.3.1
