chore: add font assets to support Korean text in PDF export

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,6 +125,9 @@ flutter:
     - family: nanum_gothic
       fonts:
         - asset: assets/nanum_gothic.ttf
+    - family: NotoSansKR-Regular
+      fonts:
+        - asset: assets/NotoSansKR-Regular.ttf
 
   # fonts:
   #   - family: Schyler
