--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   media_kit_video: ^1.3.1
   media_kit_libs_video: ^1.0.7
   pdf: ^3.11.3
+  markdown_quill: ^4.3.0
 
   amphi:
     git:
