--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/strings/
+    - assets/welcome.note
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
