chore: add SQLite dependencies

--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -18,6 +18,7 @@ dependencies:
   - mpv
   - libmimalloc-dev
   - libmimalloc2.0
+  - libsqlite3
 
 postinstall_scripts:
   - echo "Installed Amphi Notes successfully"
