--- a/.github/workflows/build_rpm_arm.yml
+++ b/.github/workflows/build_rpm_arm.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  FLUTTER_VERSION: "3.29.2"
+  FLUTTER_VERSION: "3.35.3"
 
 jobs:
   build_rpm_arm:
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0 rpm
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0 rpm libsqlite3-0 libsqlite3-dev
 
       - name: Enable Linux Desktop
         run: flutter config --enable-linux-desktop
