--- a/.github/workflows/build_tar.yml
+++ b/.github/workflows/build_tar.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  FLUTTER_VERSION: "3.29.2"
+  FLUTTER_VERSION: "3.35.3"
 
 jobs:
   build_tar:
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0
+          sudo apt-get install -y clang cmake libgtk-3-dev ninja-build libayatana-appindicator3-dev libfuse2 libmpv-dev mpv libmimalloc-dev libmimalloc2.0 libsqlite3-0 libsqlite3-dev
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
