--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -2,7 +2,7 @@ display_name: Notes
 package_name: amphi-notes
 maintainer:
   name: Amphi
-  email: amphiprioninae2024@gmail.com
+  email: support@amphi.site
 priority: optional
 section: x11
 installed_size: 45000
