--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: amphi-notes
-version: 1.1.1
-license: Apache-2.0
+version: 2.0.0
+license: GPL-3.0-or-later
 summary: Notes Application
 source-code: https://github.com/amphi2024/notes
 issues: https://github.com/amphi2024/notes/issues
