--- a/linux/packaging/deb/make_config.yaml
+++ b/linux/packaging/deb/make_config.yaml
@@ -18,7 +18,7 @@ dependencies:
   - mpv
   - libmimalloc-dev
   - libmimalloc2.0
-  - libsqlite3
+  - libsqlite3-0
 
 postinstall_scripts:
   - echo "Installed Amphi Notes successfully"
