--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,13 @@ dependencies:
   media_kit_libs_video: ^1.0.7
   pdf: ^3.11.3
   markdown_quill: ^4.3.0
+  flutter_platform_alert: ^0.8.0
+  url_launcher: ^6.3.2
 
   amphi:
     git:
       url: https://github.com/amphi2024/flutter-shared
-      ref: a7d2adc0aa4655e7f73e92e374b9b3d84a3131ae
+      ref: v2.3.0
 #    path: ../amphi
 
 dev_dependencies:
