--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,7 +6,7 @@ source-code: https://github.com/amphi2024/notes
 issues: https://github.com/amphi2024/notes/issues
 icon: ./icon.png
 description: |
-  Cross-platform note-taking app that enables users to sync their data with a self-hosted server
+  An open-source, self-hosted, and lightweight note-taking app for all platforms
 
 base: core24
 confinement: strict
